# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.hpp  hitable.hpp  hitablelist.hpp  main.cpp  ray.hpp  sphere.hpp  vec3.hpp
